--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -5,6 +5,8 @@
 	justify-content: center;
 	align-items: center;
 	text-align: center;
+	margin: 0px;
+	padding: 0px;
 }
 
 .App-logo{
@@ -40,4 +42,19 @@
 .example-components-list li > a .fa {
 	color:rgba(0,0,0,.35);
 	float:right;
+}
+
+.overall-container {
+    max-width: 100%;
+    margin: 0rem;
+    padding: 2rem;
+    padding-left: 10rem;
+}
+
+.padded-right {
+    padding-right: 2rem;
+}
+
+.redClass {
+    background-color: red;
 }
