--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -48,7 +48,7 @@
     max-width: 100%;
     margin: 0rem;
     padding: 2rem;
-    padding-left: 10rem;
+    padding-left: 5rem;
 }
 
 .padded-right {
@@ -57,4 +57,8 @@
 
 .redClass {
     background-color: red;
+}
+
+.table-wrapper-scroll-y {
+    max-height: 650px
 }
